fix(admin/components/products): make FAB float at bottom right on narrow screens

--- a/src/app/shared/components/search-box/search-box.component.scss
+++ b/src/app/shared/components/search-box/search-box.component.scss
@@ -1,5 +1,7 @@
 :host {
+  width: 0;
   flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .search-box {
